# viewprofit

./: .clang-tidy  .gitignore  CHANGELOG.md  README.md  gen_win_exe.bat  meson.build  viewprofit.code-workspace  viewprofit.in  viewprofit.py  viewprofit.sqlite
ViewProfit/: application_window.py  model.py  model_benchmark.py  model_investment.py  model_portfolio.py  plot.py  table_base.py  table_base_ib.py  table_benchmarks.py  table_investment.py  table_portfolio.py
ViewProfit/ui/: application_window.ui  custom.css  investment_chart_cfg.ui  table.ui  table_benchmarks.ui  table_funds.ui  table_portfolio.ui
data/: custom.css  meson.build  resources.qrc
src/: callout.cpp  callout.hpp  chart_funcs.cpp  chart_funcs.hpp  compare_funds.cpp  compare_funds.hpp  effects.cpp  effects.hpp  fund_allocation.cpp  fund_allocation.hpp  fund_correlation.cpp  fund_correlation.hpp  fund_pca.cpp  fund_pca.hpp  main.cpp  main_window.cpp  main_window.hpp  math.hpp  meson.build  model.cpp  model.hpp  table_base.cpp  table_base.hpp  table_benchmarks.cpp  table_benchmarks.hpp  table_fund.cpp  table_fund.hpp  table_investments.cpp  table_investments.hpp  table_portfolio.cpp  table_portfolio.hpp  table_type.hpp
src/ui/: compare_funds.ui  fund_allocation.ui  fund_correlation.ui  fund_pca.ui  main_window.ui  table_base.ui
